finished Panda Commerece Website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda Commerce</title>
+    <title>Sadit's Panda Commerce</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#shoes">Shoes</a>
-                <a class="nav-item nav-link" href="backpack">Backpack</a>
+                <a class="nav-item nav-link" href="#backpack">Backpack</a>
                 <a class="nav-item nav-link" href="#subscribe">Subscribe</a>
               </div>
             </div>
@@ -61,16 +61,15 @@
               <div class="carousel-item">
                   <div class="row  d-flex align-items-center">
                       <div class="col-md-7">
-                        <h1>X-Box for your living room</h1>
-                        <p>This is the best X-Box in the world for people who just want to waste time in front of fake sports.</p>
-                        <h1 class="price">$600</h1>
-                        <button class="buy-now-button">Buy Now</button>
-                      </div>
-                      <div class="col-md-5">
-                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                      </div>
-                  </div>
-               
+                 <h1>X-Box for your living room</h1>
+                 <p>This is the best X-Box in the world for people who just want to waste time in front of fake sports.</p>
+                <h1 class="price">$600</h1>
+              <button class="buy-now-button">Buy Now</button>
+               </div>
+               <div class="col-md-5">
+               <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+               </div>
+               </div>
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -82,8 +81,114 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+        </div>
+    
+<div class="container categories">
+    <div class="row">
+        <div class="col-md-4">
+           <div class="d-flex justify-content-between align-items-center cat1">
+            <h1>Watch</h1>
+            <img src="images/categories/watch.png" alt="">
+           </div>
+        </div>
+        <div class="col-md-4">
+            <div class="d-flex justify-content-between align-items-center cat2">
+                <h1>Bag</h1>
+            <img src="images/categories/bag.png" alt="">
+            </div>
+        </div>
+        <div class="col-md-4"> 
+         <div class=" d-flex justify-content-between align-items-center cat3">
+            <h1>Shoes</h1>
+            <img src="images/categories/shoes.png" alt="">
+         </div>
+        </div>
     </div>
 
+</div>
+
+<div class="container shoes" id="shoes">
+  <h3>Shoes</h3>
+  <div class="card-deck">
+    <div class="card">
+      <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Supply 350</h5>
+        <p class="card-text">This stylish Shoe is for my agriculture friend Shihab.He likes Orange color and cheap Products.So,I wanna gift him this fucking shoe.</p>
+        <h5>$120</h5>
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nike 360</h5>
+        <p class="card-text">This stylish Shoe is for my another agriculture friend Sondhi.He likes Ash and White color and quality Products.So,I wanna gift him this fucking shoe.</p>
+        <h5>$320</h5>
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Airmax</h5>
+        <p class="card-text">This Dashing  Red Shoe is for Me(Sadit).I like Red color and stylish Products.So,I wanna take this fucking shoe.You know i'm not an agriculture boy.</p>
+        <h5>$350</h5>
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container" id="backpack">
+  <h3>Backpack</h3>
+  <div class="card-deck">
+    <div class="card">
+      <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Backpack</h5>
+        <h5>$125</h5>
+        <p class="card-text">This Backpack is for one of my friends Jalem who is rarely called Opu.He is a red lover boy and rarely changes his bag.So, the red bag is very durable and it's for him.</p>
+      </div>
+      <div class="card-footer">
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Blue Backpack</h5>
+        <h5>$320</h5>
+        <p class="card-text">This Blue backpack is for both Siam(fish) and Shagor(Pagol).They used to wear the same underwear and they shares not only Biri but also Bou among themselves.So,this bag is dedicated to them.</p>
+      </div>
+      <div class="card-footer">
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Black Backpack</h5>
+        <h5>$169</h5>
+        <p class="card-text">This Black and smart looking backpack is dedicated to my motu friend Authoy Iqbal.He is a lover boy but he is always sad because, his boro apus are not so cute and sexy.Thats why the Black backpack is dedicated to him.</p>
+      </div>
+      <div class="card-footer">
+        <button class="buy-now-button">Buy Now >></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="d-flex justify-content-center align-items-center container orange-bg" id="subscribe">
+  <div>
+    <h3>LET'S STAY IN TOUCH...</h3>
+    <h6>Get updates on sales specials and more.</h6>
+    <input class="form-control" type="text">
+    <button class="buy-now-button">Submit</button>
+  </div>
+</div>
+<footer>
+  <small>©2020.Panda Commerce.All rights reserved by Mashfiqur Sadit.</small>
+</footer>
 
 
 
